load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

git_repository(
    name = "oneTBB",
    branch = "master",
    remote = "https://github.com/oneapi-src/oneTBB",
)

git_repository(
    name = "embree",
    branch = "add-bazel-support",
    remote = "https://github.com/Vertexwahn/embree",
)
