workspace(name = "fmtlib_demo")

load("@bazel_tools//tools/build_defs/repo:git.bzl", "new_git_repository")

new_git_repository(
    name = "fmtbuild",
    branch = "add-bazel-support",
    remote = "https://github.com/Vertexwahn/fmt",
    build_file_content = "# Empty build file on purpose" # Since support/bazel files are not in root directory of fmt we need this hack
)

new_git_repository(
    name = "fmt",
    branch = "add-bazel-support",
    remote = "https://github.com/Vertexwahn/fmt",
    build_file = "@fmtbuild//:support/bazel/BUILD.bazel"
)