"""
    SPDX-FileCopyrightText: 2022 Julian Amann <dev@vertexwahn.de>
    SPDX-License-Identifier: Apache-2.0
"""

load("//bazel:expand_template.bzl", "expand_template")

expand_template(
    name = "config_h",
    template = "config.h.in",
    out = "kernels/config.h",
    substitutions = {
        "@VERSION_STR@": "1.0.3",
    },
)

cc_binary(
    name = "HelloWorld",
    srcs = [
        "main.cpp",
        "kernels/bvh/some_header.h",
        ":config_h",
    ],
)
