"""
    SPDX-FileCopyrightText: 2022 Julian Amann <dev@vertexwahn.de>
    SPDX-License-Identifier: Apache-2.0
"""

config_setting(
    name = "osx_arm64",
    constraint_values = [
        "@platforms//os:osx",
        "@platforms//cpu:aarch64",
    ],
)

config_setting(
    name = "osx_x86_64",
    constraint_values = [
        "@platforms//os:osx",
        "@platforms//cpu:x86_64",
    ],
)

cc_binary(
    name = "HelloWorld",
    srcs = select({
        ":osx_x86_64": ["main_osx_intel.cpp"],
        ":osx_arm64": ["main_osx_M1.cpp"],
        "@platforms//os:linux": ["main_linux.cpp"],
        "@platforms//os:windows": ["main_windows.cpp"],
        "//conditions:default": ["main.cpp"],
    }),
)
