"""
    SPDX-FileCopyrightText: 2022 Julian Amann <dev@vertexwahn.de>
    SPDX-License-Identifier: Apache-2.0
"""

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "bach",
    build_file_content = """
filegroup(
    name = "bach",
    srcs = ["bach.sh"],
    visibility = ["//visibility:public"],
)
        """,
    path = "bach-0.2.9.tar.gz",
    strip_prefix = "bach-0.2.9",
)
